Update yaml for exbalance Response
