# api/swagger/swagger.yaml
@@ -268,6 +268,27 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/TransferErrorResponse"
+  /exbalance:
+    x-swagger-router-controller: dbalance
+    get:
+      tags:
+        - DEX API {symbols,ticker,orders,orderbook,orderbooktick,exdeposit,exwithdraw,makeorder,takeorder,extrade}
+      description: Returns exchange balances of EOS Derivative Tokens on DEX
+      operationId: balance
+      parameters:
+        - in: query
+          name: account
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/balanceResponse"
+        "400":
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /tokensByAccount/{account}:
     x-swagger-router-controller: tokensByAccount
     get:
@@ -897,6 +918,21 @@ definitions:
           symbol: IQ,
           price_precision: 5,
           currency_precision: 3,
+        }
+  balanceResponse:
+    type: array
+    items:
+      type: object
+      example:
+        {
+          orderId: 7eBZmmYBJNEeaSKiV4yG,
+          user: reddy,
+          symbol: IQ,
+          amount: 7.9992,
+          confirmed: 1,
+          created: 2018-10-22 05:57:18,
+          updated: 2018-10-22 06:00:58,
+          timestamp: 1540188058,
         }
   tickerResponse:
     type: array
